--- a/configs/wifi/wlan/WCNSS_qcom_cfg.ini
+++ b/configs/wifi/wlan/WCNSS_qcom_cfg.ini
@@ -100,6 +100,9 @@ gPassiveMaxChannelTime=110
 passive_max_channel_time_6g=60
 g_prefer_5g_scc_to_dbs=8
 
+# Add another interface while driver load
+gEnableConcurrentSTA=wlan1
+
 END
 
 # Note: Configuration parser would not read anything past the END marker
