sm7325-common: init: Disable adsprpcd
It is crashing and spamming logcat:

09-06 16:49:05.988   787 18832 I adsprpcd: vendor/qcom/proprietary/adsprpc/src/log_config.c:407: file_watcher_thread exiting for domain 0
09-06 16:49:05.998   787   787 I adsprpcd: vendor/qcom/proprietary/adsprpc/src/rpcmem_android.c:191: rpcmem_deinit_internal: closed ION fd 5
09-06 16:49:05.998   787   787 I adsprpcd: vendor/qcom/proprietary/adsprpc/src/fastrpc_apps_user.c:2787: fastrpc_apps_user_deinit done
09-06 16:49:06.000   787   787 E adsprpcd: vendor/qcom/proprietary/adsprpc/src/adsprpcd.c:48:adsp daemon will restart after 25ms...
09-06 16:49:06.039   787   787 I adsprpcd: vendor/qcom/proprietary/adsprpc/src/rpcmem_android.c:158: rpcmem_init_internal: opened ION device fd 5, configured heap IDs: system (0x2000000), contig (0x400000), secure (0x200), secure flags (0x80080000)
09-06 16:49:06.039   787   787 I adsprpcd: vendor/qcom/proprietary/adsprpc/src/fastrpc_apps_user.c:2847: fastrpc_apps_user_init done
09-06 16:49:06.039   787   787 I adsprpcd: vendor/qcom/proprietary/adsprpc/src/fastrpc_apps_user.c:1237: remote_handle_open: Successfully opened handle 0x0 for '":;./\attachguestos on domain 0
09-06 16:49:06.041   787 18833 I adsprpcd: vendor/qcom/proprietary/adsprpc/src/listener_android.c:111: listener thread starting
09-06 16:49:06.041   787 18834 I adsprpcd: vendor/qcom/proprietary/adsprpc/src/log_config.c:345: file_watcher_thread starting for domain 0
09-06 16:49:06.041   787 18834 E adsprpcd: vendor/qcom/proprietary/adsprpc/src/log_config.c:268:Error 0x200: fopen failed for /vendor/lib/rfsa/adsp/adsprpcd.farf. (No such file or directory)
09-06 16:49:06.041   787 18834 E adsprpcd: vendor/qcom/proprietary/adsprpc/src/log_config.c:268:Error 0x200: fopen failed for /vendor/dsp/adsprpcd.farf. (No such file or directory)
09-06 16:49:06.041   787   787 E adsprpcd: vendor/qcom/proprietary/adsprpc/src/fastrpc_apps_user.c:1125: Error 0x4e: remote_handle64_invoke failed for handle 0xbbab8

--- a/rootdir/etc/init.target.rc
+++ b/rootdir/etc/init.target.rc
@@ -225,3 +225,9 @@ service fan_control_turn_off /vendor/bin/fan_control 0
 on property:persist.vendor.radio.port_index=""
     setprop sys.usb.config adb
 
+service adsprpcd /vendor/bin/adsprpcd
+   class main
+   user media
+   group media
+   disabled
+   
