sm7325-common: Remove some data cache
fix some string issues on dirty flash update ROM zips

Signed-off-by: saikiran2001 <bjsaikiran@gmail.com>

--- a/rootdir/etc/init.qcom.rc
+++ b/rootdir/etc/init.qcom.rc
@@ -32,6 +32,9 @@ import /vendor/etc/init/hw/init.target.rc
 import /vendor/etc/init/hw/init.qcom.factory.rc
 
 on early-init
+    # Remove some data cache
+    rm /data/resource-cache
+    rm /data/system/package_cache 
 
   # create symlink for vendor mount points
     symlink /vendor/firmware_mnt /firmware
