sm7325-common: rootdir: Let telephony read /proc/cmdline
Change-Id: Ida088ee6ff50873173189269c95d0d03c27f8763

--- a/rootdir/etc/init.qcom.rc
+++ b/rootdir/etc/init.qcom.rc
@@ -441,6 +441,9 @@ on post-fs-data
     #Create dir for TUI
     mkdir /data/vendor/tui 0700 system drmrpc
 
+    # Prevents permission denied error for telephony
+    chmod 0644 /proc/cmdline
+
 service nqnfcinfo /system/vendor/bin/nqnfcinfo
     class late_start
     group nfc
